--- a/index.html
+++ b/index.html
@@ -3,9 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>My Portfolio</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
+    <div id="loader"></div>
     <h1>Welcome to my Portfolio!</h1>
     <h2>hello world</h2>
+    <script src="script.js"></script>
 </body>
 </html>
